--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^11.9.1",
     "google-fonts": "^1.0.0",
     "next": "15.3.3",
     "react": "^19.0.0",
